styles.css
html {
    text-align: center;
    font-family: 'Roboto', sans-serif;
}

body {
    color: black;
    background-color: white;
}

svg {
    fill: gray;
}
/* Dark Mode */

.dark-mode {
    background-color: #1c2052;
    color: white;
}

.dark-mode nav {
    color: white;
}

#darkmode svg:last-child {
    display: none;
}

.dark-mode #darkmode svg:first-child {
    display: none;
}
.dark-mode #darkmode svg:last-child {
    display: block;
}

.dark-mode ul li a {
    color: white;
}

.dark-mode nav {
    border-bottom: 1px solid white;
    background-color: #1c2052;
}

.dark-mode footer svg {
    fill:#567dcd;
}

/* Navbar */

nav {
    position: fixed;
    top: -1px;
    height: 69px;
    width: 100%;
    display: flex;
    background-color: white;
    border-bottom: 1px solid black;
    font-size: 1rem;
    justify-content: center;
    z-index: 5;
}

nav ul {
    display: flex;
    list-style: none;
    width: 90%;
    justify-content: space-evenly;
    align-items: center;
}

nav ul li a {
    color: black;
}

.icon {
    height: 1.25rem;
    width: 1.25rem;
    opacity: 50%;
}
#darkmode {
    border: none;
    height: 35px;
    width: 35px;
    border-radius: 50%;
}

.dark-mode .icon {
    fill: white;
}

main {
    position: relative;
    top: 69px;
}

h1 {
    margin-bottom: 2rem;
}
/* About me Section */

#about-me {
    margin: 1rem 0 2rem 0;
}

.about-me-content {
    display: inline-block;
    justify-content: center;
    align-items: center;
    width: 80%;
    margin: 0 auto;
}

p.about-me-content{
    text-align: left;
    width: 40%;
    min-width: 350px;
    margin: 0 auto;
}

img.about-me-content {
    display: inline;
    height: 22rem;
    width: auto;
}

/* Project Section */

table {
    display: flex;
    justify-content: center;
    margin-bottom: 3rem;
}

tr {
    height: 300px;
}

td {
    width: 250px;
    gap: 50px 10px;
    border: 1px solid black;
    border-radius: 5px;
}
.dark-mode td {
    border: 1px solid #567dcd;
}


/* Contact Me Section*/
.contact-button {
    height: 69px;
    width: 300px;
    font-size: 30px;
    border: none;
    border-radius: 10px;
    background-color: #1c2052;
}

.contact-button:hover {
    cursor: pointer;
}

.contact-button a {
    text-decoration: none;
    color: white;
}

.dark-mode .contact-button {
    background-color: #567dcd;
}

/* Footer */
footer {
    position: relative;
    margin: 3rem auto;
    height: 69px;
    width: 50%;
}

footer svg {
    height: 1.25rem;
    width: 1.25rem;
}



footer ul {
    display: flex;
    align-items: center;
    list-style: none;
    justify-content: space-between;
}


.contact-icon {
    height: 50px;
    width: auto;
    fill: #1c2052;
}

.dark-mode .contact-icon {
    fill: #567dcd;
}

@media only screen and (max-width:600px) {
    footer .credits {
        display: none;
    }

    #about-me img {
        display: none;
    }

    p.about-me-content {
        text-align: center;
    }
}

